--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -1,4 +1,9 @@
 @import "../../node_modules/font-awesome/scss/font-awesome";
 @import "../../node_modules/normalize.scss/normalize";
 
-@import "../../source/mixins"
+@import "global/mixins";
+@import "global/common";
+
+
+                // SECTIONS
+@import "sections/header";
