--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -12,22 +12,56 @@
     <header>
         <div class="container header">
             <div class="header__logo">
-                b<span class="header__logo__span">ino</span>
+                <span class="header__logo__b">b</span>
+                <span class="header__logo__ino">ino</span>
             </div>
 
             <nav class="header__nav">
 
-                <div class="header__list">
-                    <a href="#" class="header__item">home</a>
-                    <a href="#" class="header__item">about us</a>
-                    <a href="#" class="header__item">portfolio</a>
-                    <a href="#" class="header__item">pricing</a>
-                    <a href="#" class="header__item">team</a>
-                    <a href="#" class="header__item">blog</a>
-                    <a href="#" class="header__item">contact</a>
+                <div class="header__nav__list">
+                    <a href="#" class="header__nav__item">home</a>
+                    <a href="#" class="header__nav__item">about us</a>
+                    <a href="#" class="header__nav__item">portfolio</a>
+                    <a href="#" class="header__nav__item">pricing</a>
+                    <a href="#" class="header__nav__item">team</a>
+                    <a href="#" class="header__nav__item">blog</a>
+                    <a href="#" class="header__nav__item">contact</a>
                 </div>
             </nav>
+
+
+
+                <div class="header__info__text">
+                    <h2 class="header__info__text__priority">our clients are our first priority</h2>
+                    <h1 class="header__info__text__welcome">welcome to bino</h1>
+                    <p class="header__info__text__description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+
+                    <div class="header__arrows">
+                        <a class="header__arrows__left" href="#">
+                            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                        </a>
+                        <a class="header__arrows__right" href="#">
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        </a>
+                    </div>
+
+                        <div class="header__info__text__buttons">
+                            <button class="header__info__buttons__start buttons">get started now</button>
+                            <button class="header__info__buttons__learn buttons">learn more</button>
+
+                        </div>
+                </div>
+
+
+                
+
         </div>
+
+        
     </header>
     
 </body>
