--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -1,7 +1,3 @@
-body {
-    background-color: #282828;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -15,4 +11,26 @@ body {
 
 a {
     text-decoration: none;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+.buttons {
+    background: transparent;
+    border: 1px solid #fff;
+    text-transform: uppercase;
+    color: #ffffff;
+    padding: 22px 0;
+    box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    display: inline-block;
+    width: 19.3%;
+    margin: 0 10px;
+
+        &:hover{
+            background: $main-red;
+            border-color: $main-red;
+        }
 }
