--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -1,16 +1,126 @@
+header {
+    background: url('../../images/background_header.jpg') center/cover no-repeat;
+    min-height: 991px;
+    height: 100%;
+
+}
 .header {
+    padding-top: 22px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 
         &__logo {
             text-transform: uppercase;
-            border: 1px solid #fff;
+            border: 3px solid #f4f5f9;
+            display: block;
+            font-size: 36px;
+            margin-top: 16px;
 
-
-                &__span{
+                &__ino{
                     color: #fff;
+                    font-family: $ff-main-light;
+                    padding-right: 13px;
+                }
+
+                &__b {
+                    background-color: #fff;
+                    display: inline-block;
+                    padding: 1px 13px;
+                    font-family: $ff-main-bold;
+                    color:#4a4c55;
+                    
                 }
         }
+
+
+        &__nav__list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        &__nav__item {
+            // display: block;
+            color: #f4f5f9;
+            font-size: 13px;
+            font-family: $ff-main;
+            text-transform: uppercase;
+            margin: 35px 33px 0 30px;
+            padding-bottom: 20px;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+
+                &:hover {
+                    color:$main-red;
+                    border-bottom: 1px solid $main-red;;
+                }
+
+        }
+
+        &__info__text {
+            display: block;
+            margin: 230px auto 0 auto;
+            text-align: center;
+            position: relative;
+
+                &__priority {
+                    font-family: $ff-desc;
+                    font-size: 24px;
+                    font-weight: 400;
+                    text-transform: capitalize;
+                    color: #f4f5f9;
+                }
+
+                &__welcome {
+                    font-family: $ff-main;
+                    font-size: 72px;
+                    font-weight: 700;
+                    color: #f4f5f9;
+                    text-transform: uppercase;
+                    padding: 45px 0 45px 0;
+                    margin: 0;
+                    display: inline-block;
+                    position: relative;
+                }
+
+                &__description {
+                    display: inline-block;
+                    font-family: $ff-main;
+                    color: #cbc6c0;
+                    font-size: 14px;
+                    font-weight: 400;
+                    width:50%;
+                    text-align: center;
+                    padding: 45px 0 68px 0;
+                }
+
+                &__buttons{
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                }
+        }
+
+        &__arrows {
+            display: flex;
+            position: absolute;
+            border-radius: 2px;
+            justify-content: space-between;
+            top:45%;
+            width: 100%;
+
+            &__left,&__right {
+                display: block;
+                background: #716964;
+                width:45px;
+                height: 45px;
+            }
+
+        }
 }
+
 
 
