--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -2,6 +2,7 @@ header {
     background: url('../../images/background_header.jpg') center/cover no-repeat;
     min-height: 991px;
     height: 100%;
+    display: flex;
 
 }
 .header {
@@ -16,6 +17,8 @@ header {
             display: block;
             font-size: 36px;
             margin-top: 16px;
+            align-self: baseline;
+            margin-bottom: -20px;
 
                 &__ino{
                     color: #fff;
@@ -113,12 +116,34 @@ header {
             width: 100%;
 
             &__left,&__right {
-                display: block;
+                display: inline-block;
                 background: #716964;
                 width:45px;
                 height: 45px;
-            }
+                color: #303030;
+                font-size: 21px;
+                line-height: 45px;
+                align-content: center;
 
+                    &:hover {
+                    background: $main-red;
+                    color: #fff;
+                }
+            }
+        }
+
+        &__bottom__circle {
+            display: inline-block;
+            background: #f4f5f9;
+            border-radius: 50%;
+            width: 64px;
+            height: 64px;
+            margin: 0 auto;
+            align-self: flex-end;
+
+                &__anchor {
+                padding: 15px 20px;
+                }
         }
 }
 
