Our Services block started

--- a/source/templates/sections/our_history.html
+++ b/source/templates/sections/our_history.html
@@ -12,7 +12,7 @@
             <div class="ourHistory__principles__item">
 
                 <div class="ourHistory__principles__item__img">
-                    <i class="fa fa-desktop" aria-hidden="true"></i>
+                    <i class="fa fa-fire" aria-hidden="true"></i>
                 </div>
 
                 <h3 class="ourHistory__principles__item__h3">sleek design</h3>
@@ -69,9 +69,13 @@
 
 
         <div class="ourHistory__description">
+            <h2 class="ourHistory__description__h1">our history</h2>
 
+            <p class="ourHistory__description__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever since the 1500s, when an unk- nown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-            <button class="ourHistory__description__button buttons"></button>
+            <p class="ourHistory__description__p">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+            <button class="ourHistory__description__button buttons">browse our work</button>
 
 
         </div>
