--- a/source/styles/sections/our_history.scss
+++ b/source/styles/sections/our_history.scss
@@ -1,5 +1,6 @@
 .ourHistory {
     display: flex;
+    min-height: 1263px;
 
     &__circle {
         display: block;
@@ -20,14 +21,26 @@
                 flex-direction: row;
                 justify-content: space-around;
                 flex-wrap: wrap;
+                margin-top: 97px;
 
                 &__item {
-                    width: 18%;
+                    width: 23%;
                     display: flex;
                     flex-direction: column;
 
+                            &:hover {
+                                  h3 {
+                                      color:$main-red;
+                                  }
+                                   div {
+                                      border-color: $main-red;
+                                  }
+                             }
+                        
+
                         * {
                             align-self: center;
+                            text-align: center;
                         }
 
 
@@ -38,10 +51,75 @@
                         line-height: 73px;
                         height: 73px;
                         width: 73px;
-                        border: solid 1px grey;
-
-
+                        border: solid 1px #d8d9db;  
                     }
+
+                    &__h3 {
+                        font-family: $ff-main-bold;
+                        font-size: 18px;
+                        transform: scaleY(1.0002);
+                        margin-top: 30px;
+                        text-transform: uppercase;
+                        font-weight: 600;
+
+                            &:after {
+                                content: '';
+                                width: 40px;
+                                height: 1px;
+                                background: #999999;
+                                margin: 0 auto;
+                                display: block;
+                                margin-top: 20px;
+                            } 
+                    }
+
+                            &__p {
+                                
+                                margin-top: 20px;
+                                font-family: $ff-desc;
+                            }
                 }
+}
+
+            &__description {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: column;
+                width: 40%;
+                margin-top: 260px;
+                margin-left: auto;
+                padding-right: 250px;
+
+                    &__h1 {
+                        text-transform: uppercase;
+                        font-family: $ff-desc;
+                        color:  #6a6a6a;
+                        font-size: 36px;
+                        font-weight: 700;
+                        letter-spacing: 3.6px;
+                        border-left: 6px solid $main-red;
+                        padding-left: 15px;
+                        margin-bottom: 54px;
+                    }
+
+                    &__p {
+                        display: block;
+                        margin-bottom:47px;
+                        font-family: $ff-desc;
+                    }
+
+                    &__button {
+                        text-transform: uppercase;
+                        background: $main-red;
+                        color: #ffffff;
+                        font-family: $ff-desc;
+                        width: 48%;
+                        max-height: 56px;
+                        border-color: $main-red;
+                        margin: 0;
+
+                            
+                    }
             }
 }
+
