--- a/source/templates/sections/our_services.html
+++ b/source/templates/sections/our_services.html
@@ -2,48 +2,55 @@
 
     <div class="ourServices__left-block">
 
-        <h1 class="ourServices__left-block__h1">our services</h1>
+                <div class="ourServices__left-block__header">
+                    <h1 class="ourServices__left-block__h1">our services</h1>
+                </div>
+
+        <div class="ourServices__left-block__content">
+
+                <div class="ourServices__left-block__nav-icons">
+                    <div class="ourServices__left-block__nav-icons__item"></div>
+                    <div class="ourServices__left-block__nav-icons__item"></div>
+                    <div class="ourServices__left-block__nav-icons__item"></div>
+                </div>
+
+                    <!--Services-->
+                <div class="ourServices__left-block__services">
+                    <div class="ourServices__left-block__services__item">
+                        <h3 class="ourServices__left-block__services__item__h">web design</h3>
+                        <p class="ourServices__left-block__services__item__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
+                        
+                    </div>
+
+                    <div class="ourServices__left-block__services__item">
+                        <h3 class="ourServices__left-block__services__item__h">print design</h3>
+                        <p class="ourServices__left-block__services__item__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
+                        
+                    </div>
+
+                    <div class="ourServices__left-block__services__item">
+                        <h3 class="ourServices__left-block__services__item__h">photography</h3>
+                        <p class="ourServices__left-block__services__item__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
+                        
+                    </div>
+                </div>
 
 
+                <div class="ourServices__left-block__circles">
 
-        <div class="ourServices__left-block__nav-icons"></div>
+                    <div class="ourServices__left-block__circles__item">
+                            <i class="fa fa-desktop" aria-hidden="true"></i>
+                    </div>
 
+                    <div class="ourServices__left-block__circles__item">
+                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                    </div>
 
-        <div class="ourServices__left-block__services">
-            <div class="ourServices__left-block__services__item">
-                <h3 class="ourServices__left-block__services__item__h">web design</h3>
-                <p class="ourServices__left-block__services__item__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
-                
-            </div>
-
-            <div class="ourServices__left-block__services__item">
-                <h3 class="ourServices__left-block__services__item__h">print design</h3>
-                <p class="ourServices__left-block__services__item__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
-                
-            </div>
-
-            <div class="ourServices__left-block__services__item">
-                <h3 class="ourServices__left-block__services__item__h">photography</h3>
-                <p class="ourServices__left-block__services__item__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ip sum has been the industry's standard dummy text ever.</p>
-                
-            </div>
+                    <div class="ourServices__left-block__circles__item">
+                            <i class="fa fa-camera" aria-hidden="true"></i>
+                    </div>
         </div>
-
-
-        <div class="ourServices__left-block__item__circles">
-
-            <div class="ourServices__left-block__item__circles__ltem">
-                    <i class="fa fa-desktop" aria-hidden="true"></i>
-            </div>
-
-            <div class="ourServices__left-block__item__circles__ltem">
-                    <i class="fa fa-pencil" aria-hidden="true"></i>
-            </div>
-
-            <div class="ourServices__left-block__item__circles__ltem">
-                    <i class="fa fa-camera" aria-hidden="true"></i>
-            </div>
-        </div>
+    </div>
 
 
 
