--- a/source/styles/sections/our_services.scss
+++ b/source/styles/sections/our_services.scss
@@ -15,7 +15,7 @@
                     display: flex;
                     flex-direction: column;
                     position: absolute;
-                    top: 40%;
+                    top: 40%!important;
                     left: 4%;
 
                             &__item {
