--- a/source/styles/global/fonts.scss
+++ b/source/styles/global/fonts.scss
@@ -86,7 +86,7 @@
     font-family: 'source_sans_probold';
     src: url('../fonts/sourcesanspro-bold-webfont.woff2') format('woff2'),
          url('../fonts/sourcesanspro-bold-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: 700;
     font-style: normal;
 
 }
