--- a/source/styles/global/vars.scss
+++ b/source/styles/global/vars.scss
@@ -8,5 +8,7 @@ $ff-main-bold: 'open_sansbold';
 
 $ff-desc: 'source_sans_proregular';
 
+$ff-desc-bold: 'source_sans_probold';
+
 
 $main-red:#e74c3c;
