--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -13,4 +13,5 @@
 @import "sections/header";
 @import "sections/our_history";
 @import "sections/our_services";
-@import "sections/recent_works"
+@import "sections/recent_works";
+@import "sections/case_study";
