--- a/source/templates/sections/header.html
+++ b/source/templates/sections/header.html
@@ -39,8 +39,8 @@
                     </div>
 
                         <div class="header__info__text__buttons">
-                            <button class="header__info__buttons__start buttons">get started now</button>
-                            <button class="header__info__buttons__learn buttons">learn more</button>
+                            <button class="buttons header__info__text__buttons__start ">get started now</button>
+                            <button class=" buttons header__info__text__buttons__learn ">learn more</button>
 
                         </div>
                 </div>
