--- a/source/styles/global/mixins.scss
+++ b/source/styles/global/mixins.scss
@@ -30,3 +30,69 @@
         color: $color;
     }
 }
+
+
+@mixin section_header () {
+
+    &__header {
+            display: block;
+            margin: 0 auto;
+            width: 50%;
+            text-align: center;
+            padding-top: 135px;
+            position: relative;
+
+
+                * {
+                    padding-bottom: 29px;
+                }
+
+                &__h2 {
+                    font-family: $ff-desc-bold;
+                    text-transform: uppercase;
+                    color:  #6a6a6a;
+                    font-size: 36px;
+                    letter-spacing: 3.6px;
+                }
+
+                &__p {
+                    font-family: $ff-main;
+                    color: #999999;
+                    font-size: 14px;
+                    line-height: 29px;
+                    }
+
+                    &__pseudo-circle {
+                        display: inline-block;
+                        border-radius: 50%;
+                        background-color:$main-red;
+                        width: 7px;
+                        height: 7px;
+                        margin: auto ;
+                        padding: 0;
+                        position: relative;
+
+                            &:after {
+                                height: 1px;
+                                width: 80px;
+                                content: '';
+                                background: #999999;
+                                display: block;
+                                position: absolute;
+                                top:50%;
+                                left: 20px;
+                            }
+
+                            &:before {
+                                height: 1px;
+                                width: 80px;
+                                content: '';
+                                background: #999999;
+                                display: block;
+                                position: absolute;
+                                top:50%;
+                                right: 20px;
+                            }
+                    }
+            }
+}
