--- a/source/templates/sections/recent_works.html
+++ b/source/templates/sections/recent_works.html
@@ -4,6 +4,7 @@
     <div class="recent-works__header">
         <h2 class="recent-works__header__h2">recent works</h2>
         <p class="recent-works__header__p">It has survived not only five centuries, but also the leap scrambled it to make a type.</p>
+        <div class="recent-works__header__pseudo-circle"></div>
     </div>
 
     <div class="recent-works__tags">
