pricing section done

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -15,3 +15,5 @@
 @import "sections/our_services";
 @import "sections/recent_works";
 @import "sections/case_study";
+@import "sections/stats";
+@import "sections/our_pricing";
