keep in touch and footer section done

--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -36,3 +36,10 @@ html {
 }
 
 
+// .our_blog_clicked {
+//     display: block;
+//     height:480px;
+//     width:480px;
+//     background: $main-red;
+//     z-index: 10;
+// }
