--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -17,3 +17,6 @@
 @import "sections/case_study";
 @import "sections/stats";
 @import "sections/our_pricing";
+@import "sections/our_blog";
+@import "sections/keep-in-touch";
+@import "sections/footer";
