--- a/source/styles/sections/our_pricing.scss
+++ b/source/styles/sections/our_pricing.scss
@@ -14,6 +14,7 @@
                     min-height: 610px;
                     width: 32.5%;
                     background: #f4f5f9;
+                    margin-bottom: 70px;
 
                         &:hover, &:active {
                             .our__pricing__plans__item__button{
