--- a/source/templates/sections/footer.html
+++ b/source/templates/sections/footer.html
@@ -7,6 +7,15 @@
     </div>
 
 
+    <div class="footer__socials-button-down">
+        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+    </div>
+
+    <div class="footer__socials-button-up">
+        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+    </div>
+
+
     
 
 
