paths for images fixed

--- a/source/styles/sections/case_study.scss
+++ b/source/styles/sections/case_study.scss
@@ -68,7 +68,7 @@
                 width: 585px;
                 height: 722px;
                 position: absolute;
-                background: url(../../images/case_study.jpg) no-repeat;
+                background: url(../images/case_study.jpg) no-repeat;
             }
 
 }
