--- a/source/styles/sections/footer.scss
+++ b/source/styles/sections/footer.scss
@@ -1,6 +1,6 @@
 footer {
     min-height: 480px;
-    background: url('../../images/footer_bg.jpg') no-repeat;
+    background: url(../images/footer_bg.jpg) no-repeat;
     position: relative;
 
         .footer {
