--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -1,5 +1,5 @@
 header {
-    background: url('../../images/background_header.jpg') center/cover no-repeat;
+    background: url('../images/background_header.jpg') center/cover no-repeat;
     min-height: 991px;
     height: 100%;
     display: flex;
