--- a/source/styles/sections/stats.scss
+++ b/source/styles/sections/stats.scss
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     color: #ffffff;
-    background: url('../../images/case_study_bg.jpg')no-repeat;
+    background: url('../images/case_study_bg.jpg')no-repeat;
     min-height: 511px;
 
         &__item {
