--- a/source/styles/sections/our_services.scss
+++ b/source/styles/sections/our_services.scss
@@ -95,7 +95,6 @@
             &__circles {
                 display: flex;
                 flex-direction: column;
-                // flex-wrap: wrap;
                 margin-right: -4%;
                 z-index: 100;
 
@@ -118,6 +117,6 @@
         &__right-block {
             display: block;
             width: 45%;
-            background: url('../../images/our services_right_block.jpg') no-repeat;
+            background: url('../images/our services_right_block.jpg') no-repeat;
         }
 }
