--- a/source/styles/sections/keep-in-touch.scss
+++ b/source/styles/sections/keep-in-touch.scss
@@ -75,9 +75,19 @@
                                         width: 37%;
                                         line-height: 40px;
                                         margin: 15px 0 0 10px;
+
+                                            &:focus, &:active {
+                                                font-size: 14px;
+                                            }
                                     }
                                 }
                             }
                 }
-        }
+}
+
+.error {
+    color: red;
+    font-family: $ff-main;
+    font-size: 18px;
+}
 
