--- a/source/styles/sections/recent_works.scss
+++ b/source/styles/sections/recent_works.scss
@@ -45,6 +45,11 @@
 
                 &__item {
                     width: 25%;
+                    opacity: 0.5;
+
+                        &:hover {
+                            opacity: 1;
+                        }
                     
                     
                 }
