--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -11,6 +11,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
 
+
         &__logo {
             text-transform: uppercase;
             border: 3px solid #f4f5f9;
@@ -19,6 +20,14 @@ header {
             margin-top: 16px;
             align-self: baseline;
             margin-bottom: -20px;
+
+                @media (max-width:1200px) {
+                    margin-left: 30px;
+                }
+
+                @media (max-width:830px) {
+                    margin: 16px auto 0;
+                }
 
                 &__ino{
                     color: #fff;
@@ -36,21 +45,43 @@ header {
                 }
         }
 
+        &__nav {
+            max-height: 85px;
+            @media (max-width:830px) {
+                    margin: 0 auto;
+                }
+        }
 
         &__nav__list {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
+
+                @media (max-width:1200px) {
+                    margin-right: 30px;
+                }
+
+                
         }
 
         &__nav__item {
-            // display: block;
             color: #f4f5f9;
             font-size: 13px;
             font-family: $ff-main;
             text-transform: uppercase;
             margin: 35px 33px 0 30px;
             padding-bottom: 20px;
+
+                @media (max-width:980px) {
+                        margin: 35px 20px 20px;
+                }
+
+                @media (max-width:660px) {
+                    margin: 15px 10px 0px 10px;                    
+                    padding-bottom: 0px;
+                }
+
+                
 
                 &:last-child {
                     margin-right: 0;
@@ -68,6 +99,10 @@ header {
             margin: 230px auto 0 auto;
             text-align: center;
             position: relative;
+
+                @media (max-width:960px) {
+                    margin:2px auto 0;
+                }
 
                 &__priority {
                     font-family: $ff-desc;
